# weave

./: .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  PROGRESS-archive.md  PROGRESS.md  README.md  clippy.toml  feature_list.json  feature_list.schema.json  init.sh  justfile  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: session-exit-check.sh
.githooks/: pre-commit
crates/weave-server/: Cargo.toml  build.rs
crates/weave-server/src/: _INDEX.md  config.rs  db.rs  error.rs  lib.rs  main.rs
crates/weave-server/src/a2a/: _INDEX.md  agent_card.rs  auth.rs  messages.rs  mod.rs  tasks.rs  types.rs
crates/weave-server/src/agent/: _INDEX.md  cli_runner.rs  conformance.rs  fake_cli_test.rs  mod.rs  model_cache.rs  registry.rs  turn_context.rs
crates/weave-server/src/agent/anthropic/: mod.rs  streaming.rs  types.rs
crates/weave-server/src/agent/claude_code/: agent.rs  mod.rs  parser.rs  parser_test.rs  translator.rs  translator_test.rs
crates/weave-server/src/agent/permissions/: claude_code.rs  mod.rs
crates/weave-server/src/api/: _INDEX.md  codebases.rs  health.rs  kanban.rs  mod.rs  providers.rs  responses.rs  sessions.rs  specialists.rs  static_assets.rs  traces.rs  workspaces.rs
crates/weave-server/src/migrations/: 001_init.sql  002_kanban.sql  003_workspace_unique_name.sql  004_task_context.sql  005_task_column_cascade.sql  006_column_transition_gates.sql  007_artifacts.sql  008_notes.sql  009_a2a_context_id.sql  010_session_codebase_id.sql  011_session_runtime.sql  012_provider_runtime_kind.sql  013_column_runtime_kind.sql  014_task_extended_fields.sql  015_column_stage.sql  016_column_automation.sql  017_kanban_session_watch.sql  018_task_codebase_id.sql
crates/weave-server/src/service/: _INDEX.md  kanban.rs  kanban_lifecycle.rs  kanban_prompt.rs  kanban_prompt_ctx.rs  mod.rs  sessions.rs  sessions_wrapped_tests.rs  startup.rs
crates/weave-server/src/specialist/: _INDEX.md  mod.rs
crates/weave-server/src/sse/: _INDEX.md  mod.rs
crates/weave-server/src/store/: _INDEX.md  artifacts.rs  boards.rs  codebases.rs  columns.rs  kanban_session_watch.rs  kanban_test_helpers.rs  kanban_validations.rs  mod.rs  notes.rs  providers.rs  sessions.rs  tasks.rs  traces.rs  workspaces.rs
crates/weave-server/src/tools/: _INDEX.md  mod.rs  shell.rs
crates/weave-server/src/tools/artifact/: list_artifacts.rs  mod.rs  provide_artifact.rs  request_artifact.rs
crates/weave-server/src/tools/fs/: edit.rs  list.rs  mod.rs  read.rs  search.rs  write.rs
crates/weave-server/src/tools/git/: commit.rs  diff.rs  log.rs  mod.rs  status.rs
crates/weave-server/src/tools/kanban/: create_card.rs  get_board.rs  mod.rs  move_card.rs  search_cards.rs  update_card.rs  update_task.rs
crates/weave-server/src/tools/note/: append_to_note.rs  create_note.rs  list_notes.rs  mod.rs  read_note.rs  set_note_content.rs
crates/weave-server/src/tools/task/: get.rs  list.rs  mod.rs  update_fields.rs  update_status.rs
crates/weave-server/src/trace/: _INDEX.md  mod.rs
crates/weave-server/tests/: cli_conformance.rs
docs/: ARCHITECTURE.md  PLAN.md  SYSTEM_DESIGN.md  api-contracts.md  concurrency-model.md  data-model.md  domain-services.md  error-handling.md  frontend-architecture.md  kanban-automation.md  operations.md  provider-abstraction.md  sse-design.md
docs/design-docs/: kanban-claude-code-coordination.md  kanban-ui-gaps-2026-06-13.md
docs/road-map/: PLAN.md  multi-runtime-strategy.md  multi-runtime-tasks.md
docs/user/: best-practices.md  codebases.md  common-workflows.md  index.md  journey.md  kanban.md  providers.md  quickstart.md  sessions.md  specialists.md  workspaces.md
resources/specialists/: backlog-refiner.md  dev-crafter.md  done-reporter.md  review-guard.md  todo-orchestrator.md
web/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/app/: layout.tsx  router.tsx
web/src/components/: _INDEX.md  add-provider-modal.tsx  error-banner.tsx  modal.tsx  new-board-modal.tsx  new-codebase-modal.tsx  new-session-modal.tsx  new-session-wizard.tsx  session-header.tsx  spinner.tsx  status-badge.tsx  wrapped-session-banner.tsx
(+58 files in other folders)
