[package]
name = "weave-server"
version = "0.1.0"
edition = "2021"
description = "Weave — web-based multi-agent coordination platform"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
