[package]
name = "weave-server"
version = "0.1.0"
edition = "2021"
description = "Weave — web-based multi-agent coordination platform"
default-run = "weave-server"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Stream trait
futures-core = "0.3"

# Cancellation tokens for async tasks
tokio-util = "0.7"

# HTTP client (for provider communication)
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
futures-util = "0.3"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Unix process management (for process group killing in shell_exec)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Filesystem tools
glob = "0.3"
regex = "1"

# Cross-platform path normalization (handles Windows UNC paths and
# macOS /tmp -> /private/tmp symlinks even though Weave is Linux-first).
# Used by `agent::validate_wrapped_session_cwd` (feat-050) to compare a
# session's cwd against registered codebase paths.
dunce = "1"

# JSON Schema validation (for tool input sanity checks, feat-037)
jsonschema = { version = "0.18", default-features = false }

# Static asset serving for the embedded frontend (feat-023)
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["sync"] }
tempfile = "3"
